k8s/svc-bot.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot
  namespace: anime-bot
spec:
  type: ClusterIP
  selector:
    app: bot
  ports:
    - name: http
      port: 8080
      targetPort: 8080
