k8s/svc-catalog.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: anime-bot
spec:
  type: ClusterIP
  selector:
    app: catalog
  ports:
    - name: http
      port: 8080
      targetPort: 8080
