k8s/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: anime-bot
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
