k8s/svc-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: anime-bot
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
