k8s/svc-list.yaml
apiVersion: v1
kind: Service
metadata:
  name: list
  namespace: anime-bot
spec:
  type: ClusterIP
  selector:
    app: list
  ports:
    - name: http
      port: 8080
      targetPort: 8080
