k8s/svc-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: anime-bot
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - name: http
      port: 8080
      targetPort: 8080
